# verified-cogen

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Dockerfile  README.md  dafny.py  dump.txt  flake.nix  invariants.py  main.py  modes.py  pyproject.toml  run_validating.sh  run_with_houdini.sh  shell.nix  test.sh  utils.py  verus.py
.github/workflows/: test-pytest-ruff.yml  test-pytest.yml
.teamcity/: pom.xml  settings.kts
HumanEval/: load.py
HumanEval/0_has_close_elements/: has_close_elements.py  has_close_elements.vpr  has_close_elements_wo.dfy
HumanEval/100_make_a_pile/: make_a_pile.py
HumanEval/104_unique_digits/: unique_digits.py
HumanEval/107_even_odd_palindrome/: even_odd_palindrome.py
HumanEval/108_count_nums/: count_nums.py
HumanEval/109_move_one_ball/: move_one_ball.py
HumanEval/10_is_palindrome/: is_palindrome.py
HumanEval/111_histogram/: histogram.py
HumanEval/115_max_fill/: max_fill.py
HumanEval/116_sort_array/: sort_array.py
HumanEval/117_select_words/: select_words.py
HumanEval/120_maximum/: maximum.py
HumanEval/123_get_odd_collatz/: get_odd_collatz.py
HumanEval/124_valid_date/: valid_date.py
HumanEval/126_is_sorted/: is_sorted.py
HumanEval/128_prod_signs/: prod_signs.py
HumanEval/12_longest/: longest.dfy  longest.py
HumanEval/130_tri/: tri.py
HumanEval/138_is_equal_to_sum_even/: is_equal_to_sum_even.py
HumanEval/139_special_factorial/: special_factorial.py
HumanEval/13_greatest_common_divisor/: greatest_common_divisor.vpr
HumanEval/141_file_name_check/: file_name_check.py
HumanEval/143_words_in_sentence/: words_in_sentence.py
HumanEval/146_specialFilter/: specialFilter.py
HumanEval/147_get_max_triples/: get_max_triples.py
HumanEval/148_bf/: bf.py
HumanEval/155_even_odd_count/: even_odd_count.py
HumanEval/159_eat/: eat.py
HumanEval/161_solve/: solve.py
HumanEval/163_generate_integers/: generate_integers.py
HumanEval/16_count_distinct_characters/: count_distinct_characters.py
HumanEval/19_sort_numbers/: sort_numbers.py
HumanEval/20_find_closest_elements/: find_closest_elements.py
HumanEval/22_filter_integers/: filter_integers.py
HumanEval/23_strlen/: strlen.py
HumanEval/25_factorize/: factorize.py
HumanEval/27_flip_case/: flip_case.py
HumanEval/28_concatenate/: concatenate.py
HumanEval/30_get_positive/: get_positive.py
HumanEval/31_is_prime/: is_prime.py
HumanEval/32_poly/: poly.py
HumanEval/33_sort_third/: sort_third.py
benches/: extract_prompt.py
gui/: Cargo.toml
gui/src/: helpers.rs  main.rs
gui/src/ui/: display.rs  file_picker.rs  mod.rs  output.rs  plot.rs  run.rs  settings.rs  token_input.rs  verifier_details.rs
llm/: llm.py  prompts.py
results/: tries_HumanEval-Dafny.json  tries_HumanEval-RustBench_1.json
scripts/: collect_verus_errors.py  compare_2_modes.py  dafny_shell_validator.sh  generate_avg_graph.py  generate_heatmap.py  generate_result_graph.py  generate_result_graph_dafny_nagini.py  generate_several_modes_table.py  generate_several_modes_verify_table.py  plot_statistics.py  process_files.fish  process_verus_task.py  rename_vars.py  run_several_modes.sh  run_verus_mode4.sh  run_with_houdini.sh  venn.py
src/: helpers.py  main.py  modes.py  test.py  verifier.py
tests/: test_code_export.py  test_compare_errors.py  test_dafny.py  test_dafny_generate copy.py  test_dafny_generate.py  test_inequality_replacer.py  test_nagini.py  test_nagini_generate.py  test_nagini_pure.py  test_pure_calls.py  test_remove.py  test_rewriters.py  test_scoring.py  test_separate.py  test_step.py  test_verus.py  test_verus_wo_helpers.py  test_verus_wo_prepost.py
verified_cogen/: __init__.py  __main__.py  args.py  main.py
(+1834 files in other folders)
