[tool.poetry]
name = "verified-cogen"
version = "0.1.0"
description = "Verify code using LLMs"
authors = ["JetBrains Research"]
readme = "README.md"

[tool.poetry.scripts]
verified-cogen = "verified_cogen.main:main"

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "grazie"
url = "https://packages.jetbrains.team/pypi/p/grazi/jetbrains-ai-platform-public/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
grazie-api-gateway-client = "^0.1.3"
appdirs = "^1.4.4"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
ruff = "*"
matplotlib = "*"
pyright = "*"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
