[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
eframe = { version = "0.28.1", features = ["persistence"] }
egui_extras = { version = "0.28.1", features = ["syntect"] }
env_logger = "0.11.3"
log = "0.4.22"
rfd = "0.14.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
