[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
directories = "5.0.1"
eframe = { version = "0.28.1", features = ["persistence"] }
egui_extras = { version = "0.28.1", features = ["syntect"] }
egui_plot = "0.28.1"
env_logger = "0.11.3"
log = "0.4.22"
once_cell = "1.19.0"
rfd = "0.14.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
